crates/k-rust/src/inner/parser/snapshots/k_rust__inner__parser__parametric__tests__concretizes_all_four_scala_cases.snap
---
source: crates/k-rust/src/inner/parser/parametric.rs
expression: summary
---
[
    "Int ::= \"case1(\" Int \",\" K \")\" [P=Int, R=K] from 2 parameter(s)",
    "K ::= \"case1(\" K \",\" K \")\" [P=K, R=K] from 2 parameter(s)",
    "KItem ::= \"case1(\" KItem \",\" K \")\" [P=KItem, R=K] from 2 parameter(s)",
    "MInt{8} ::= \"case1(\" MInt{8} \",\" K \")\" [P=MInt{8}, R=K] from 2 parameter(s)",
    "MInt{8} ::= \"case2(\" MInt{8} \",\" MInt{K} \")\" [W=8, X=K] from 2 parameter(s)",
    "KItem ::= Int [S=Int] from 1 parameter(s)",
    "KItem ::= MInt{8} [S=MInt{8}] from 1 parameter(s)",
    "Int ::= \"case4(\" K \")\" [S=K] from 1 parameter(s)",
]
