crates/k-rust/src/inner/parser/snapshots/k_rust__inner__parser__parametric__tests__infers_parameters_in_a_parameterized_result_sort.snap
---
source: crates/k-rust/src/inner/parser/parametric.rs
description: "K term parsed as MInt{8}:\n\ncase2(m,m)\n"
---
Ok(
    Apply {
        label: Label {
            name: "#SemanticCastToMInt{8}",
            parameters: [],
        },
        arguments: [
            Apply {
                label: Label {
                    name: "case2",
                    parameters: [
                        Sort {
                            name: "8",
                            parameters: [],
                        },
                        Sort {
                            name: "8",
                            parameters: [],
                        },
                    ],
                },
                arguments: [
                    Apply {
                        label: Label {
                            name: "m",
                            parameters: [],
                        },
                        arguments: [],
                    },
                    Apply {
                        label: Label {
                            name: "m",
                            parameters: [],
                        },
                        arguments: [],
                    },
                ],
            },
        ],
    },
)
