crates/k-rust/src/inner/parser/snapshots/k_rust__inner__parser__parametric__tests__infers_parameters_used_only_by_arguments.snap
---
source: crates/k-rust/src/inner/parser/parametric.rs
description: "K term parsed as Int:\n\ncase4(k)\n"
---
Ok(
    Apply {
        label: Label {
            name: "case4",
            parameters: [
                Sort {
                    name: "K",
                    parameters: [],
                },
            ],
        },
        arguments: [
            Apply {
                label: Label {
                    name: "k",
                    parameters: [],
                },
                arguments: [],
            },
        ],
    },
)
