crates/k-rust/src/inner/parser/snapshots/k_rust__inner__parser__parametric__tests__infers_parameters_when_result_is_a_formal_parameter.snap
---
source: crates/k-rust/src/inner/parser/parametric.rs
description: "K term parsed as Int:\n\ncase1(i,k)\n"
---
Ok(
    Apply {
        label: Label {
            name: "case1",
            parameters: [
                Sort {
                    name: "Int",
                    parameters: [],
                },
                Sort {
                    name: "K",
                    parameters: [],
                },
            ],
        },
        arguments: [
            Apply {
                label: Label {
                    name: "i",
                    parameters: [],
                },
                arguments: [],
            },
            Apply {
                label: Label {
                    name: "k",
                    parameters: [],
                },
                arguments: [],
            },
        ],
    },
)
